<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:gravity="center">

    <LinearLayout
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:background="#ff4d4f51"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_margin="10dp"
            android:text="@string/prompt"
            android:textColor="#ffffffff"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#26ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/single_color_recommended"
            android:textAlignment="center"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#26ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/pop_tips_tv_iKnow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/i_know"
                android:textColor="#ff4a90e2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pop_tips_tv_noMore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/noRemind"
                android:textColor="#80ffffff"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>