<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.meishe.sdkdemo.edit.clipEdit.speed.SpeedActivity">

    <com.meishe.sdkdemo.edit.view.CustomTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        >

    </com.meishe.sdkdemo.edit.view.CustomTitleBar>

    <RelativeLayout
        android:id="@+id/spaceLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="#ff242728">

        <TextView
            android:id="@+id/speedTipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/change_speed"
            android:textColor="#ffffffff"
            android:textSize="10sp" />

        <com.meishe.sdkdemo.edit.clipEdit.speed.CustomSpeedSeekBar
            android:id="@+id/changeSpeed_seekBar"
            style="@style/speedSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speedTipText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="58dp"
            android:max="5"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progress="3"
            android:progressDrawable="@drawable/speed_seekbar"
            android:thumb="@drawable/custom_speed_seekbar_ball" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/changeSpeed_seekBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="54dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/one_eighthX"
                android:textColor="#ffffffff"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quarterX"
                android:textColor="#ffffffff"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/halfX"
                android:textColor="#ffffffff"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/oneX"
                android:textColor="#ffffffff"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/twoX"
                android:textColor="#ffffffff"
                android:textSize="10sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fourX"
                android:textColor="#ffffffff"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/speedFinish"
            android:background="#1AFFFFFF" />

        <ImageView
            android:id="@+id/speedFinish"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp15"
            android:background="@mipmap/finish" />
    </RelativeLayout>
</LinearLayout>
